# agentic-ai

./: readme.md  update-readme.md
.devcontainer/: devcontainer.json
01_langGraph/: readme.md
02_crewai/: readme.md
02_crewai/01_basics_intro/: pyproject.toml
02_crewai/01_basics_intro/03_customer_outreach/: pyproject.toml
02_crewai/01_basics_intro/03_customer_outreach/src/customer_outreach/: main.py
02_crewai/01_basics_intro/03_customer_outreach/src/customer_outreach/config/: tasks.yaml
02_crewai/01_basics_intro/03_customer_outreach/src/customer_outreach/tools/: custom_tool.py
02_crewai/01_basics_intro/04_automate_event_planning/: README.md  marketing_report.md
02_crewai/01_basics_intro/05_financial_analysis_agnet/: README.md  pyproject.toml
02_crewai/01_basics_intro/05_financial_analysis_agnet/src/financial_analysis_agnet/: crew.py  main.py
02_crewai/01_basics_intro/05_financial_analysis_agnet/src/financial_analysis_agnet/config/: agents.yaml
02_crewai/01_basics_intro/05_financial_analysis_agnet/src/financial_analysis_agnet/tools/: custom_tool.py
02_crewai/01_basics_intro/article_agent/: README.md  report.md
02_crewai/01_basics_intro/article_agent/src/article_agent/: crew.py
02_crewai/01_basics_intro/article_agent/src/article_agent/config/: agents.yaml  tasks.yaml
02_crewai/01_basics_intro/automate_event_planning/: pyproject.toml  venue_details.json
02_crewai/01_basics_intro/automate_event_planning/src/automate_event_planning/: crew.py  main.py
02_crewai/01_basics_intro/automate_event_planning/src/automate_event_planning/config/: agents.yaml  tasks.yaml
02_crewai/01_basics_intro/automate_event_planning/src/automate_event_planning/tools/: custom_tool.py
02_crewai/01_basics_intro/customer_outreach/: README.md  report.md
02_crewai/01_basics_intro/customer_outreach/src/customer_outreach/: crew.py
02_crewai/01_basics_intro/customer_support/: pyproject.toml
02_crewai/01_basics_intro/customer_support/src/customer_support/config/: agents.yaml
02_crewai/01_basics_intro/instructions/: ceg_small_business.md
02_crewai/01_basics_intro/src/: 01_article_agent.ipynb  03_customer_outreach.ipynb  04_automate_event_planning.ipynb
02_crewai/02_basic_projects/01_job_application_crew/: pyproject.toml  tailored_resume.md
02_crewai/02_basic_projects/01_job_application_crew/db/: chroma.sqlite3
02_crewai/02_basic_projects/01_job_application_crew/src/job_application_crew/: crew.py  main.py
02_crewai/02_basic_projects/01_job_application_crew/src/job_application_crew/config/: agents.yaml  tasks.yaml
02_crewai/02_basic_projects/02_news_letter/: pyproject.toml  today_news.md
02_crewai/02_basic_projects/02_news_letter/src/ai_news_letter/: crew.py  main.py
02_crewai/02_basic_projects/02_news_letter/src/ai_news_letter/config/: agents.yaml  tasks.yaml
02_crewai/02_basic_projects/02_news_letter/src/ai_news_letter/tools/: custom_tool.py
02_crewai/02_rag/02_yt_videos_rag/: README.md  pyproject.toml  report.md
02_crewai/02_rag/02_yt_videos_rag/db/: chroma.sqlite3
02_crewai/02_rag/02_yt_videos_rag/src/02_yt_videos_rag/: crew.py  main.py
02_crewai/02_rag/02_yt_videos_rag/src/yt_videos_rag/: crew.py  main.py
02_crewai/02_rag/02_yt_videos_rag/src/yt_videos_rag/config/: agents.yaml  tasks.yaml
02_crewai/02_rag/02_yt_videos_rag/src/yt_videos_rag/model/: model.py
02_crewai/02_rag/02_yt_videos_rag/src/yt_videos_rag/tools/: AddVideoVectorDBTool.py  FetchYTVideos.py  WebSearch.py
02_crewai/03_basic_project/youtube_automation_crew/: .env.example  pyproject.toml  youtube_video_report.txt
02_crewai/03_basic_project/youtube_automation_crew/src/youtube_automation_crew/: crew.py  main.py
02_crewai/03_basic_project/youtube_automation_crew/src/youtube_automation_crew/config/: agents.yaml  tasks.yaml
02_crewai/03_basic_project/youtube_automation_crew/src/youtube_automation_crew/tools/: youtube_search_tool.py  youtube_video_detail_tool.py
02_crewai/03_basic_projects/03_youtube_automate/: README.md  pyproject.toml
02_crewai/03_basic_projects/03_youtube_automate/src/03_youtube_automate/: crew.py  main.py
02_crewai/03_basic_projects/03_youtube_automate/src/youtube_automate/: crew.py  main.py
02_crewai/04_langgraph_crewai/01_email_assistant/: pyproject.toml
02_crewai/04_langgraph_crewai/01_email_assistant/src/email_assistant/: crew.py  main.py
02_crewai/04_langgraph_crewai/01_email_assistant/src/email_assistant_crew/: main.py
02_crewai/04_langgraph_crewai/01_email_assistant/src/email_assistant_crew/config/: agents.yaml  tasks.yaml
02_crewai/04_langgraph_crewai/01_email_assistant/src/nodes/: nodes.py
03_autogen/: readme.md
04_Phidata/: readme.md
04_openai_agent/: readme.md
04_openai_agent/02_openai_agent_sdk/01_basics/: .env.example  pyproject.toml
04_openai_agent/02_openai_agent_sdk/01_basics/app/: 01_agent.py  02_structured_output.py  03_tools.py  04_handoffs.py  05_guadrails.py  06_context.py
04_openai_agent/02_openai_agent_sdk/02_projects/01_news_letter/: .env  pyproject.toml
04_openai_agent/02_openai_agent_sdk/02_projects/01_news_letter/app/: main.py
04_openai_agent/02_openai_agent_sdk/02_projects/01_news_letter/app/services/: agent.py
04_openai_agent/02_openai_agent_sdk/02_projects/01_travel_agent/: Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml
04_openai_agent/02_openai_agent_sdk/02_projects/01_travel_agent/app/: main.py
04_openai_agent/02_openai_agent_sdk/02_projects/01_travel_agent/app/agents/: agnets.py
04_openai_agent/02_openai_agent_sdk/02_projects/01_travel_agent/app/services/: agnets.py
04_swarm/: readme.md
05_google_adk/: readme.md
05_google_adk/01_basics/: .gitignore  pyproject.toml
05_google_adk/01_basics/app/: agent.py  models.py  tools.py
06_amzaon_bedrock/: readme.md
07_agno(phidata)/: readme.md
07_amzaon_bedrock/: readme.md
08_agno(phidata)/02_gym_fitness_agent/: pyproject.toml
08_agno(phidata)/02_gym_fitness_agent/app/: main.py
Phidata/Financial-Agent/: agents.db  pyproject.toml
Phidata/Financial-Agent/app/: agent_team.py  playground.py
(+72 files in other folders)
