[project]
name = "learning-crewai"
version = "0.1.0"
description = "article-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
article_agent = "article_agent.main:run"
run_crew = "article_agent.main:run"
train = "article_agent.main:train"
replay = "article_agent.main:replay"
test = "article_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
