[project]
name = "learning_google_adk"
version = "0.1.0"
description = ""
authors = [
    {name = "MuhammadAhsaanAbbasi",email = "mahsaanabbasi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk (>=0.2.0,<0.3.0)",
    "adktools (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
