[project]
name = "financial_analysis_agnet"
version = "0.1.0"
description = "financial_analysis_agnet using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
financial_analysis_agnet = "financial_analysis_agnet.main:run"
run_crew = "financial_analysis_agnet.main:run"
train = "financial_analysis_agnet.main:train"
replay = "financial_analysis_agnet.main:replay"
test = "financial_analysis_agnet.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
