[project]
name = "ai_news_letter"
version = "0.1.0"
description = "ai-news-letter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "firecrawl-py (>=1.13.2,<2.0.0)"
]

[project.scripts]
ai_news_letter = "ai_news_letter.main:run"
run_crew = "ai_news_letter.main:run"
train = "ai_news_letter.main:train"
replay = "ai_news_letter.main:replay"
test = "ai_news_letter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
