[project]
name = "yt_videos_rag"
version = "0.1.0"
description = "02_yt_videos_rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "firecrawl-py (>=1.15.0,<2.0.0)",
]

[project.scripts]
yt_videos_rag = "yt_videos_rag.main:run"
run_crew = "yt_videos_rag.main:run"
train = "yt_videos_rag.main:train"
replay = "yt_videos_rag.main:replay"
test = "yt_videos_rag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
