[project]
name = "youtube_automation_crew"
version = "0.1.0"
description = "youtube_automation_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "streamlit (>=1.43.2,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "langchain-groq (>=0.2.5,<0.3.0)"
]

[project.scripts]
youtube_automation_crew = "youtube_automation_crew.main:run"
run_crew = "youtube_automation_crew.main:run"
train = "youtube_automation_crew.main:train"
replay = "youtube_automation_crew.main:replay"
test = "youtube_automation_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
