[project]
name = "03_youtube_automate"
version = "0.1.0"
description = "03_youtube_automate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
03_youtube_automate = "03_youtube_automate.main:run"
run_crew = "03_youtube_automate.main:run"
train = "03_youtube_automate.main:train"
replay = "03_youtube_automate.main:replay"
test = "03_youtube_automate.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
