[project]
name = "01_email_assistant"
version = "0.1.0"
description = "01_email_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
email_assistant = "email_assistant.main:run"
run_crew = "email_assistant.main:run"
train = "email_assistant.main:train"
replay = "email_assistant.main:replay"
test = "email_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
