[project]
name = "email_assistant"
version = "0.1.0"
description = "email_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "langchain (>=0.3.23,<0.4.0)",
    "langgraph (>=0.3.25,<0.4.0)",
    "langchain-core (>=0.3.51,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langsmith (>=0.3.24,<0.4.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)"
]

[project.scripts]
email_assistant = "email_assistant.main:run"
run_crew = "email_assistant.main:run"
train = "email_assistant.main:train"
replay = "email_assistant.main:replay"
test = "email_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
