[project]
name = "01-travel-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "MuhammadAhsaanAbbasi",email = "mahsaanabbasi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents (>=0.0.5,<0.0.6)",
    "dotenv (>=0.9.9,<0.10.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
